# fastapi_blog

./: auth.py  blog.db  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
templates/: home.html  layout.html
